--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,7 +7,7 @@ homeassistant:
   time_zone: America/Phoenix
   packages: !include_dir_named packages
 
-automation: !include_dir_merge_list automation/
+#automation: !include_dir_merge_list automation/
 
 config:
 conversation:
