--- a/packages/master_bedroom_fan.yaml
+++ b/packages/master_bedroom_fan.yaml
@@ -72,6 +72,12 @@ homeassistant:
     switch.master_bedroom_fan_vacation:
       <<: *contained
 
+    switch.master_bedroom_fan_delay:
+      <<: *contained
+
+    switch.master_bedroom_fan_summer_mode:
+      <<: *contained
+
     ################################################
     ## Script
     ################################################
